@@ -59,6 +59,8 @@ void     navigation_tree_select_session (NavTree *tree, session *sess);
 void     navigation_tree_remove_session (NavTree *tree, session *sess);
 void     navigation_tree_add_accels     (NavTree *navtree, GtkWindow *window);
 
+void     initialize_navtree_actions     (void);
+
 
 /***** NavModel *****/
 #define NAVMODEL_TYPE            (navigation_model_get_type ())
